[package]
name = "islam"
version = "3.2.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "science"]
edition = "2021"
keywords = ["salah", "pray", "islam", "hijri"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/islam"
rust-version = "1.77.1"
description = "Islamic library for Rust"

[dependencies]
chrono = "0.4.37"
thiserror = "1.0.58"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
